--- a/src/app/components/mapa/mapa.component.html
+++ b/src/app/components/mapa/mapa.component.html
@@ -4,13 +4,13 @@
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
         <agm-map (mapClick)="agregarMarcador($event)" [latitude]="lat" [longitude]="lng" [zoom]="15">
-            <agm-marker *ngFor="let marcador of marcadores" [latitude]="marcador.lat" [longitude]="marcador.lng">
+            <agm-marker *ngFor="let marcador of marcadores; let i = index" [latitude]="marcador.lat" [longitude]="marcador.lng">
                 <agm-info-window>
                     <strong>{{ marcador.titulo }}</strong>
                     <p>{{ marcador.descripcion }}</p>
                     <div>
-                        <button mat-raised-button color="primary">Editar</button>
-                        <button mat-raised-button color="warn">Borrar</button>
+                        <button (click)="editarMarcador(marcador)" mat-raised-button color="primary">Editar</button>
+                        <button (click)="borrarMarcador(i)" mat-raised-button color="warn">Borrar</button>
                     </div>
                 </agm-info-window>
             </agm-marker>
